# social_network_test

./: .env  .gitignore  pyproject.toml
core/: errors.py  mixins.py  models.py  tests.py  utils.py
posts/: filters.py  models.py  selectors.py  services.py  urls.py
posts/migrations/: 0001_initial.py  0002_auto_20210414_1204.py
posts/tests/: factories.py
posts/tests/api/: test_post_create_api.py  test_post_detail_api.py  test_post_like_api.py  test_post_list_api.py
posts/tests/selectors/: test_get_like_analytics_selector.py  test_get_or_create_like_selector.py  test_post_list_selector.py
posts/tests/services/: test_post_create_service.py  test_set_like_services.py
posts/views/: __init__.py  like_analitics_api.py  like_analytics_api.py  post_create_api.py  post_detail_api.py  post_like_api.py  post_list_api.py
social_network/: settings.py  urls.py
users/: admin.py  middlewares.py  models.py  selectors.py  services.py  urls.py
users/migrations/: 0001_initial.py  0002_auto_20210405_1753.py  0003_auto_20210414_1130.py  0004_auto_20210416_1605.py  0005_useractivity.py  0006_auto_20210417_1014.py  0007_auto_20210417_1016.py  0008_userlastactivity.py  0009_delete_useractivity.py
users/tests/: factories.py
users/tests/api/: test_signup.py  test_user_last_activity_api.py
users/tests/services/: test_get_user_last_activity_data_service.py  test_user_create.py
users/views/: __init__.py  signup_api.py  user_last_activity_api.py
